# agent-orchestrator

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: chat_with_agent.rs  test_api.rs
prompts/: branch-agent.md  leaf-agent.md
src/: config.rs  main.rs
src/agent/: executor.rs  mod.rs  pool.rs  trait.rs  trait_decls.rs
src/hook/: mod.rs
src/i18n/: mod.rs
src/llm/: mod.rs
src/logger/: mod.rs
src/mcp/: mod.rs
src/memory/: mod.rs
src/skill/: mod.rs
src/ui/: mod.rs
src/ui/events/: mod.rs
src/workflow/: mod.rs
