[package]
name = "agent-orchestrator"
version = "0.1.0"
edition = "2021"
description = "Agent orchestration framework with TUI interface"
license = "MIT"
authors = ["AgentOrchestrator Team"]

[[bin]]
name = "orchestrator"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
ratatui = "0.28"
crossterm = "0.28"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
anyhow = "1"
dirs = "6"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
once_cell = "1"
parking_lot = "0.12"
async-trait = "0.1"

[target.'cfg(windows)'.dependencies]
winreg = "0.55"

[profile.release]
strip = true
lto = true
codegen-units = 1
